# base-extended

./: base-extended.cabal
src/Prelude/: Extended.hs  Polymorphic.hs
