name:                base-extended
version:             0.4.2.1
synopsis:            Extended versions of modules in the 'base' library.
description:         Including the 'Prelude.Extended' module saves you from
                     the pain of including Data.List, Control.Monad, etc. over
                     and over.  It also includes the the 'Safe' module from
                     the @safe@ library by default, which provides improved
                     variants of standard partial functions like 'head'.
license:             BSD3
license-file:        LICENSE
author:              Simon Meier, Silk
maintainer:          code@silk.co
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Prelude.Extended
    Prelude.Polymorphic
  build-depends:
      base == 4.*
    , safe
    , time
    , time-locale-compat
    , transformers
